syntax = "proto3";

package login;

message Request {
    uint64 msg_id = 1;
    uint64 client_id = 2;
    uint64 user_id = 3;
    string data = 4;
}

message Response {
    uint64 msg_id = 1;
    uint64 user_id = 2;
    int64 rank_num = 3;
}

